--- a/src/login/web/index.html
+++ b/src/login/web/index.html
@@ -5,10 +5,9 @@
 <meta http-equiv="content-type" content="text/html;charset=utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 <title>自动化运维</title>
-
-<link rel="stylesheet" type="text/css" href="css/style.css">
-<script type="text/javascript" src="js/jquery.min.js"></script>
-<script type="text/javascript" src="js/vector.js"></script>
+<link rel="stylesheet" type="text/css" href="../html/css/style.css">
+<script type="text/javascript" src="../html/js/jquery.min.js"></script>
+<script type="text/javascript" src="../html/js/vector.js"></script>
 </head>
 <body>
 
@@ -19,7 +18,7 @@
 			<form class="form" id="entry_form">
 				<input type="text" placeholder="用户名" name="entry_name" value="admin">
 				<input type="password" placeholder="密码" name="entry_password">
-				<button type="button" id="entry_btn">登录</button>
+					<button type="button" id="entry_btn">登录</button>
 				<div id="prompt" class="prompt"></div>
 			</form>
 		</div>
